# churn-modeling

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.yaml  final-suggestio  pyproject.toml  wholePlan
src/api/: __init__.py  main.py  schemas.py
src/api/endpoints/: predict.py
src/churn_model/: __init__.py  config.py  evaluate.py  pipeline.py  predict.py  processing.py  train.py  tune.py  utils.py
